# StructOpt

./: .gitignore  README.md  environment.mamba.yml  pyproject.toml
src/structopt/: __init__.py  cli.py  config.py  io.py  ligand.py  pipeline.py  prep.py  sim.py
tests/: test_cli.py  test_config.py  test_io.py  test_ligand.py  test_pipeline.py  test_pipeline_smoke.py
tests/data/: OBP5_model_0.cif  fold_r2plus116_shorter_esp1_model_0.cif  fold_r2plus116_shorter_esp1_model_0_optimized.cif  geraniol_model_0.cif
