[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structopt"
version = "0.1.0"
description = "CLI tools for quick protein structure cleanup and optimization with OpenMM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StructOpt Contributors" }]
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.9.0",
  "openmm>=8.1.1",
  "pdbfixer>=1.10",
  "numpy>=1.26.0",
  "rdkit>=2023.9.5",
]

[project.scripts]
structopt = "structopt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: integration tests that can take substantial wall time",
]

[tool.hatch.build.targets.wheel]
packages = ["src/structopt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
